# SomeGame

./: CMakeLists.txt  CWG_CPP.sln  README.md  SFML.vcxproj  SFML.vcxproj.filters  imgui.ini  main.cpp
data/headers/: customFunctions.h
imgui/: imgui-SFML.cpp  imgui_demo.cpp
